@@ -45,13 +45,22 @@
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>14</source>
-					<target>14</target>
-				</configuration>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <configuration>
+				<release>14</release>
+				<compilerArgs>
+				    <arg>--enable-preview</arg>
+				</compilerArgs>
+				<forceJavacCompilerUse>true</forceJavacCompilerUse>
+				<parameters>true</parameters>
+			    </configuration>
+			</plugin>
+
+			<plugin>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <configuration>
+				<argLine>--enable-preview</argLine>
+			    </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
